# llm_engineering

./: Pipfile  pyproject.toml  requirements.txt
week1/: day1.ipynb  day2 EXERCISE.ipynb  day5.ipynb  week1 EXERCISE.ipynb
week2/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb
week3/community-contributions/: dataset_generator.ipynb
week4/: day3.ipynb  day4.ipynb  optimized.cpp
week5/: day1.ipynb  day2.ipynb  day3.ipynb  day4.5.ipynb  day4.ipynb  day5.ipynb
week6/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  download_curated_dataset.ipynb
week8/: day1.ipynb  day2.0.ipynb  day2.1.ipynb  day2.2.ipynb  day2.3.ipynb  day2.4.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  deal_agent_framework.py  hello.py  memory.json  modal_get_started.py
