[tool.poetry]
name = "llm-engineering"
version = "0.1.0"
description = ""
authors = ["Shengy <shengy90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
numpy = "<2.0"
chromadb = "<0.6.0"
scipy = "<1.14.0"
python-dotenv = "^1.0.1"
jupyterlab = "^4.3.4"
ipywidgets = "^8.1.5"
requests = "^2.32.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
gensim = "^4.3.3"
torch = "^2.5.1"
transformers = "^4.47.1"
tqdm = "^4.67.1"
openai = "^1.58.1"
gradio = "^5.9.1"
langchain = {extras = ["docarray"], version = "^0.3.13"}
tiktoken = "^0.8.0"
faiss-cpu = "^1.9.0.post1"
langchain-openai = "^0.2.14"
langchain-experimental = "^0.3.4"
langchain-chroma = "^0.1.4"
datasets = "^3.2.0"
sentencepiece = "^0.2.0"
google-generativeai = "^0.8.3"
anthropic = "^0.42.0"
unstructured = "^0.16.11"
plotly = "^5.24.1"
jupyter-dash = "^0.4.2"
beautifulsoup4 = "^4.12.3"
pydub = "^0.25.1"
modal = "^0.70.3"
ollama = "^0.4.5"
accelerate = "^1.2.1"
psutil = "^6.1.1"
setuptools = "^75.6.0"
speedtest-cli = "^2.1.3"
bitsandbytes = "0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
